# patent-checker

./: .gitignore  CLAUDE.md  DESIGN.md  MANIFEST.in  README.md  debug_shuyo.py  debug_shuyo2.py  main.py  pyproject.toml  start.bat  start.command
.github/ISSUE_TEMPLATE/: false_detection.md
.github/workflows/: build.yml  bump_version.yml  publish.yml
meisai_checker/: __init__.py  analyzer.py  blocks.py  cli.py  config.py  file_reader.py  gui.py  html_template.html  m9_gansho.py  mcp_server.py  parser.py  preprocessor.py  tokenizer.py  viewer.py
meisai_checker/grammar/: particles.py
meisai_checker/patent/: __init__.py  ambiguity.py  anaphora.py  fugo.py  support.py  title.py
meisai_checker/structure/: __init__.py  abstract.py  docfields.py  ref_numbers.py  sections.py
meisai_checker/textcheck/: __init__.py  brackets.py  charset.py  kuten.py  length.py  repetition.py  style.py
patent_checker/: analyzer.py  cli.py  config.py  gui.py  html_template.html  m7_ambiguity.py  mcp_server.py  parser.py  tokenizer.py  viewer.py
tests/: README.md  conftest.py  test_snapshot_analyze.py  test_snapshot_check_funcs.py
tests/cases/m3/: README.md
tests/fixtures/: gansho_filing_01.txt  koukai_01.txt  koukai_02.txt  koukai_03_sjis.txt
tests/snapshots/: analyze__gansho_filing_01.json  analyze__koukai_01.json  analyze__koukai_02.json  analyze__koukai_03_sjis.json  check_abstract__gansho_filing_01.json  check_abstract__koukai_01.json  check_abstract__koukai_02.json  check_abstract__koukai_03_sjis.json  check_fugo__gansho_filing_01.json  check_fugo__koukai_01.json  check_fugo__koukai_02.json  check_fugo__koukai_03_sjis.json  check_jis__koukai_01.json  check_jis__koukai_02.json  check_length__koukai_01.json  check_length__koukai_03_sjis.json  check_repetition__koukai_03_sjis.json  check_structure__koukai_01.json  check_structure__koukai_02.json  check_structure__koukai_03_sjis.json  check_support__gansho_filing_01.json  check_support__koukai_01.json  check_support__koukai_02.json  check_support__koukai_03_sjis.json  check_title__gansho_filing_01.json  check_title__koukai_01.json  check_title__koukai_02.json  check_title__koukai_03_sjis.json
