[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meisai-checker"
version = "0.59.0"
description = "特許明細書の自動方式チェックツール"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "aki0ka" }]
requires-python = ">=3.10"
keywords = ["patent", "特許", "明細書", "方式審査"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fugashi>=1.3",
    "unidic-lite>=1.0.8",
    "pyperclip>=1.9",
    "pywebview>=5.0",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
mcp = ["fastmcp>=0.4", "pytoony>=0.1.2"]
dev = ["pytest>=7.0"]
all = ["fastmcp>=0.4", "pytoony>=0.1.2"]

[project.scripts]
meisai-checker = "meisai_checker.cli:main"
meisai-checker-mcp = "meisai_checker.mcp_server:mcp.run"

[project.urls]
Repository = "https://github.com/aki0ka/meisai-checker"

[tool.setuptools.packages.find]
where = ["."]
include = ["meisai_checker*"]

[tool.setuptools.package-data]
meisai_checker = ["html_template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
